Added new modules and excluded tms from build
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@571 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.app/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.app/pom.xml
@@ -29,11 +29,6 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.tms.domain</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.integration</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -59,7 +54,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.zz.client.flex.wrapper</artifactId>
+            <artifactId>org.openwms.client.flex.wrapper</artifactId>
             <version>${project.version}</version>
             <type>war</type>
         </dependency>
