--- a/org.openwms/trunk/source/org.openwms.common.domain.as/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.domain.as/pom.xml
@@ -97,6 +97,10 @@
                     <includeJavaClasses>
                         <class>org.openwms.common.domain.*</class>
                     </includeJavaClasses>
+                            <sourcePaths>
+                                <sourcePath>${project.basedir}/src/main/flex/</sourcePath>
+                                <sourcePath>${project.build.directory}/generated-sources/flexmojos/</sourcePath>
+                            </sourcePaths>
                 </configuration>
             </plugin>
         </plugins>
