--- a/org.openwms/trunk/source/org.openwms.tms.service.spring/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.tms.service.spring/pom.xml
@@ -52,7 +52,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.common.integration</artifactId>
+            <artifactId>org.openwms.tms.integration</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
