Changed source path according to standard Java settings
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@572 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.client.flex.wrapper/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.wrapper/pom.xml
@@ -28,7 +28,7 @@
         <url>https://openwms2005.svn.sourceforge.net/svnroot/openwms2005/org.openwms/trunk/source/org.openwms.client.flex.wrapper</url>
     </scm>
     <build>
-        <sourceDirectory>src/main</sourceDirectory>
+        <sourceDirectory>src/main/java</sourceDirectory>
         <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
