Lifted to Spring version 3.0.0.RELEASE
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@576 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.common.integration.jpa/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.integration.jpa/pom.xml
@@ -67,6 +67,10 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>com.springsource.org.apache.commons.logging</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>org.aspectj-library</artifactId>
             <type>libd</type>
