--- a/org.openwms/trunk/source/pom.xml
+++ b/org.openwms/trunk/source/pom.xml
@@ -237,7 +237,7 @@
         <moduleDir>.</moduleDir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdkVersion>1.6</jdkVersion>
-        <spring.version>2.5.6</spring.version>
+        <spring.version>3.0.0.RELEASE</spring.version>
         <hibernate.version>3.2.6.GA</hibernate.version>
         <maven.test.failure.ignore>true</maven.test.failure.ignore>
         <granite.version>2.0.0.GA</granite.version>
@@ -570,7 +570,7 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>org.springframework.spring-library</artifactId>
                 <type>libd</type>
-                <version>3.0.0.M3</version>
+                <version>3.0.0.RELEASE</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
@@ -613,25 +613,25 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>org.springframework.test</artifactId>
-                <version>3.0.0.M3</version>
+                <version>3.0.0.RELEASE</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>org.springframework.context</artifactId>
-                <version>3.0.0.M3</version>
+                <version>3.0.0.RELEASE</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>org.springframework.instrument</artifactId>
-                <version>3.0.0.M3</version>
+                <version>3.0.0.RELEASE</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>org.springframework.aspects</artifactId>
-                <version>3.0.0.M3</version>
+                <version>3.0.0.RELEASE</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -646,11 +646,6 @@
                 <version>1.5.6</version>
             </dependency>
 
-            <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>org.openwms.common.infrastructure.log4j</artifactId>
-                <version>${project.version}</version>
-            </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.common.infrastructure.postgres</artifactId>
