--- a/org.openwms/trunk/source/pom.xml
+++ b/org.openwms/trunk/source/pom.xml
@@ -249,6 +249,7 @@
         <module>org.openwms.common.domain</module>
         <module>org.openwms.common.infrastructure.postgres</module>
         <module>org.openwms.common.domain.as</module>
+        <module>org.openwms.common.framework.test</module>
         <module>org.openwms.common.integration</module>
         <module>org.openwms.common.integration.eclipselink</module>
         <module>org.openwms.common.integration.jpa</module>
