Moved deployment descriptor
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@584 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.common.framework.test/src/test/resources/jdbc.test.properties
+++ b/org.openwms/trunk/source/org.openwms.common.framework.test/src/test/resources/jdbc.test.properties
@@ -4,16 +4,16 @@
 # Distributable under LGPL license.
 # See terms of license at gnu.org.
 #
-jdbc.test.driverClassName=org.hsqldb.jdbcDriver
-jdbc.test.url=jdbc:hsqldb:mem:openwms
-jdbc.test.username=sa
-jdbc.test.password=
-jdbc.test.persistenceUnit=OpenWMS-test
-jdbc.test.dialect=org.hibernate.dialect.HSQLDialect
-
-#jdbc.test.driverClassName=org.postgresql.Driver
-#jdbc.test.url=jdbc:postgresql:OPENWMSDB
-#jdbc.test.username=OPENWMS
-#jdbc.test.password=OPENWMS
+#jdbc.test.driverClassName=org.hsqldb.jdbcDriver
+#jdbc.test.url=jdbc:hsqldb:mem:openwms
+#jdbc.test.username=sa
+#jdbc.test.password=
 #jdbc.test.persistenceUnit=OpenWMS-test
-#jdbc.test.dialect=org.hibernate.dialect.PostgreSQLDialect
+#jdbc.test.dialect=org.hibernate.dialect.HSQLDialect
+
+jdbc.test.driverClassName=org.postgresql.Driver
+jdbc.test.url=jdbc:postgresql:OPENWMSDB
+jdbc.test.username=OPENWMS
+jdbc.test.password=OPENWMS
+jdbc.test.persistenceUnit=OpenWMS-test
+jdbc.test.dialect=org.hibernate.dialect.PostgreSQLDialect
