Fixed unit tests
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@593 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.common.domain/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.domain/pom.xml
@@ -28,14 +28,11 @@
             <plugin>
                 <groupId>com.springsource.bundlor</groupId>
                 <artifactId>com.springsource.bundlor.maven</artifactId>
-                <version>1.0.0.M6</version>
                 <executions>
                     <execution>
-                        <id>bundlor</id>
                         <goals>
-                            <goal>transform</goal>
+                            <goal>bundlor</goal>
                         </goals>
-                        <phase>package</phase>
                     </execution>
                 </executions>
             </plugin>
@@ -43,7 +40,6 @@
     </build>
 
     <dependencies>
-        <!-- Runtime dependencies -->
         <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>com.springsource.javax.persistence</artifactId>
