--- a/org.openwms/trunk/source/org.openwms.common.integration.jpa/src/test/resources/jdbc.test.properties
+++ b/org.openwms/trunk/source/org.openwms.common.integration.jpa/src/test/resources/jdbc.test.properties
@@ -11,6 +11,26 @@ jdbc.test.password=
 jdbc.test.persistenceUnit=OpenWMS-test
 jdbc.test.dialect=org.hibernate.dialect.HSQLDialect
 
+#jdbc.test.driverClassName=org.h2.Driver
+#jdbc.test.url=jdbc:h2:./target/openwms;FILE_LOCK=NO
+#jdbc.test.username=sa
+#jdbc.test.password=
+#jdbc.test.persistenceUnit=OpenWMS-test
+#jdbc.test.dialect=org.eclipse.persistence.platform.database.oracle.OraclePlatform
+
+#jdbc.test.driverClassName=org.apache.derby.jdbc.EmbeddedDriver
+#jdbc.test.url=jdbc:derby:./target/openwms;create=true
+#jdbc.test.username=sa
+#jdbc.test.password=
+#jdbc.test.persistenceUnit=OpenWMS-test
+
+#jdbc.test.driverClassName=org.hsqldb.jdbcDriver
+#jdbc.test.url=jdbc:hsqldb:mem:openwms
+#jdbc.test.username=sa
+#jdbc.test.password=
+#jdbc.test.persistenceUnit=OpenWMS-test
+#jdbc.test.dialect=org.eclipse.persistence.platform.database.HSQLPlatform
+
 #jdbc.test.driverClassName=org.postgresql.Driver
 #jdbc.test.url=jdbc:postgresql:OPENWMSDB
 #jdbc.test.username=OPENWMS
