--- a/org.openwms/trunk/source/org.openwms.common.service.api/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.service.api/pom.xml
@@ -26,14 +26,12 @@
             <plugin>
                 <groupId>com.springsource.bundlor</groupId>
                 <artifactId>com.springsource.bundlor.maven</artifactId>
-                <version>1.0.0.M6</version>
                 <executions>
                     <execution>
                         <id>bundlor</id>
                         <goals>
-                            <goal>transform</goal>
+                            <goal>bundlor</goal>
                         </goals>
-                        <phase>package</phase>
                     </execution>
                 </executions>
             </plugin>
