--- a/org.openwms/trunk/source/org.openwms.common.domain/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.domain/pom.xml
@@ -18,11 +18,9 @@
     <artifactId>org.openwms.common.domain</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
-
     <properties>
         <moduleDir>..</moduleDir>
     </properties>
-
     <build>
         <plugins>
             <plugin>
@@ -30,6 +28,7 @@
                 <artifactId>com.springsource.bundlor.maven</artifactId>
                 <executions>
                     <execution>
+                        <id>bundlor</id>
                         <goals>
                             <goal>bundlor</goal>
                         </goals>
@@ -38,17 +37,19 @@
             </plugin>
         </plugins>
     </build>
-
     <dependencies>
+        <!-- JEE API -->
         <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>com.springsource.javax.persistence</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>com.springsource.org.apache.commons.lang</artifactId>
         </dependency>
-        <!-- Test dependencies -->
+
+        <!-- Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.framework.test</artifactId>
