--- a/org.openwms/trunk/source/org.openwms.common.infrastructure.configuration/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.infrastructure.configuration/pom.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 /*
- * OpenWMS, the Open Warehouse Management System
- * 
- * Distributable under LGPL license.
- * See terms of license at gnu.org.
- */
+ * openwms.org, the Open Warehouse Management System.
+ *
+ * This file is part of openwms.org.
+ *
+ * openwms.org is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as 
+ * published by the Free Software Foundation, either version 3 of the
+ * License, or (at your option) any later version.
+ *
+ * openwms.org is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this software. If not, write to the Free
+ * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
+ * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
+ */  
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
@@ -23,9 +37,9 @@
     </properties>
     <build>
         <plugins>
+ 
             <plugin>
                 <artifactId>maven-install-plugin</artifactId>
-                <version>2.3</version>
                 <executions>
                     <execution>
                         <id>install-library</id>
@@ -35,7 +49,7 @@
                         </goals>
                         <configuration>
                             <groupId>org.openwms</groupId>
-                            <artifactId>org.openwms.infrastructure.configuration.properties</artifactId>
+                            <artifactId>org.openwms.common.infrastructure.configuration</artifactId>
                             <version>${project.version}</version>
                             <packaging>properties</packaging>
                             <file>src/org.openwms.infrastructure.configuration.properties</file>
@@ -43,6 +57,29 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>deploy-library</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>deploy-file</goal>
+                        </goals>
+                        <configuration>
+                            <repositoryId>repo.sourceforge.net</repositoryId>
+                            <url>${distribution.repo.serverProtocol}//${distribution.repo.snapshot.serverUrl.rootPath}</url>
+                            <groupId>org.openwms</groupId>
+                            <artifactId>org.openwms.common.infrastructure.configuration</artifactId>
+                            <version>${project.version}</version>
+                            <packaging>properties</packaging>
+                            <file>src/org.openwms.infrastructure.configuration.properties</file>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 </project>
