--- a/org.openwms/trunk/source/org.openwms.common.infrastructure.hsql/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.infrastructure.hsql/pom.xml
@@ -1,8 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-    <!--
-        /* * OpenWMS, the Open Warehouse Management System * * Distributable under LGPL license. * See terms of license
-        at gnu.org. */
-    -->
+<!--
+/*
+ * openwms.org, the Open Warehouse Management System.
+ *
+ * This file is part of openwms.org.
+ *
+ * openwms.org is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as 
+ * published by the Free Software Foundation, either version 3 of the
+ * License, or (at your option) any later version.
+ *
+ * openwms.org is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this software. If not, write to the Free
+ * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
+ * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
+ */  
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -24,7 +42,6 @@
                 <artifactId>com.springsource.bundlor.maven</artifactId>
                 <executions>
                     <execution>
-                        <id>bundlor</id>
                         <goals>
                             <goal>bundlor</goal>
                         </goals>
@@ -34,23 +51,33 @@
         </plugins>
     </build>
     <dependencies>
-        <!-- Runtime dependencies -->
+        <!-- Spring Framework -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>org.springframework.spring-library</artifactId>
             <type>libd</type>
+            <scope>provided</scope>
         </dependency>
+
+        <!-- JEE API -->
         <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>com.springsource.javax.persistence</artifactId>
+            <scope>provided</scope>
         </dependency>
+
+        <!-- Apache libraries -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>com.springsource.org.apache.commons.dbcp</artifactId>
+            <scope>provided</scope>
         </dependency>
+
+        <!-- Database libraries -->
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>com.springsource.org.hsqldb</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
