--- a/org.openwms/trunk/source/org.openwms.common.infrastructure.postgres/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.infrastructure.postgres/pom.xml
@@ -71,12 +71,14 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Apache libraries -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>com.springsource.org.apache.commons.dbcp</artifactId>
             <scope>provided</scope>
         </dependency>
 
+        <!-- Database libraries -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>com.springsource.org.postgresql.jdbc4</artifactId>
@@ -88,6 +90,7 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.infrastructure.configuration</artifactId>
