Added param jdbc.dialect to switch between database and JPA provider
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@612 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.common.infrastructure.configuration/src/org.openwms.infrastructure.configuration.properties
+++ b/org.openwms/trunk/source/org.openwms.common.infrastructure.configuration/src/org.openwms.infrastructure.configuration.properties
@@ -22,3 +22,9 @@ jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql:OPENWMS
 jdbc.username=OPENWMS
 jdbc.password=OPENWMS
+# Used with PostgreSQL database and Hibernate as JPA Provider
+jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Used with PostgreSQL database and EclipseLink as JPA Provider
+#jdbc.dialect=org.eclipse.persistence.platform.database.PostgreSQLPlatform
+# Used with HSQL database and Hibernate as JPA Provider
+#jdbc.dialect=org.hibernate.dialect.HSQLDialect
