--- a/org.openwms/trunk/source/org.openwms.common.service.api/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.service.api/pom.xml
@@ -55,6 +55,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.domain</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
